--- a/requirements/requirements.in
+++ b/requirements/requirements.in
@@ -1,3 +1,4 @@
+argon2-cffi==18.3.0
 Babel>=2.5
 bleach<3.0
 boto3
@@ -46,6 +47,7 @@ pytest
 pytest-django
 pytest-vcr
 pytest-mock
+python-dotenv
 vcrpy
 raven==6.9.0
 requests>=1.2.0
