--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -6,6 +6,7 @@
 #
 amqp==2.3.2               # via kombu
 aniso8601==3.0.2          # via graphene
+argon2-cffi==18.3.0
 asn1crypto==0.24.0        # via cryptography
 atomicwrites==1.1.5       # via pytest
 attrs==18.1.0             # via pytest
@@ -19,7 +20,7 @@ cairocffi==0.9.0          # via cairosvg, weasyprint
 cairosvg==2.1.3
 celery[redis]==4.2.1
 certifi==2018.8.13        # via requests
-cffi==1.11.5              # via cairocffi, cryptography, weasyprint
+cffi==1.11.5              # via argon2-cffi, cairocffi, cryptography, weasyprint
 chardet==3.0.4            # via requests
 cryptography==2.3.1       # via django-payments
 cssselect2==0.2.1         # via cairosvg, weasyprint
@@ -97,6 +98,7 @@ pytest-mock==1.10.0
 pytest-vcr==0.3.0
 pytest==3.7.1
 python-dateutil==2.7.3    # via botocore, elasticsearch-dsl, faker, freezegun
+python-dotenv==0.9.1
 python3-openid==3.1.0     # via social-auth-core
 pytz==2018.5              # via babel, celery, django
 pyyaml==3.13              # via vcrpy
@@ -107,7 +109,7 @@ requests==2.19.1
 rx==1.6.1                 # via graphql-core
 s3transfer==0.1.13        # via boto3
 singledispatch==3.4.0.3   # via graphene-django
-six==1.11.0               # via bleach, cryptography, django-templated-email, elasticsearch-dsl, faker, freezegun, graphene, graphene-django, graphql-core, graphql-relay, html5lib, measurement, more-itertools, promise, purl, pytest, python-dateutil, singledispatch, social-auth-app-django, social-auth-core, vcrpy
+six==1.11.0               # via argon2-cffi, bleach, cryptography, django-templated-email, elasticsearch-dsl, faker, freezegun, graphene, graphene-django, graphql-core, graphql-relay, html5lib, measurement, more-itertools, promise, purl, pytest, python-dateutil, singledispatch, social-auth-app-django, social-auth-core, vcrpy
 social-auth-app-django==2.1.0
 social-auth-core==1.7.0   # via social-auth-app-django
 sqlparse==0.2.4           # via django-debug-toolbar
@@ -125,4 +127,4 @@ weasyprint==0.42.3
 webencodings==0.5.1       # via html5lib, tinycss2
 wrapt==1.10.11            # via vcrpy
 xmltodict==0.11.0         # via django-payments
-yarl               # via vcrpy
+yarl==1.2.6               # via vcrpy
