--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,36 @@ saleor/media/
 .env
 .envs/*
 !.envs/.local/
+
+.*
+!.babelrc
+!.circleci
+!.codeclimate.yml
+!.coveragerc
+!.dockerignore
+!.editorconfig
+!.envs
+!.eslintrc.json
+!.flowconfig
+!.gqlconfig
+!.github
+!.gitignore
+!.nvmrc
+!.pylintrc
+!.travis*
+!.tx
+*.css
+*.pyc
+local_settings.py
+coverage/
+*\.egg*
+# data
+/docs/_build/
+/media/
+/node_modules/
+/static/
+/saleor/static/assets/
+webpack-bundle.json
+/templates/templated_email/compiled/*
+!/templates/templated_email/compiled/.gitkeep
+
