--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 python_version = "3.7"
 
 [packages]
+argon2-cffi = "*"
 Babel = ">=2.5"
 bleach = "<3.0"
 "boto3" = "*"
@@ -18,6 +19,7 @@ django-babel = ">=0.6.1"
 django-bootstrap4 = ">=0.0.4"
 django-cache-url = ">=1.0.0"
 django-countries = ">=5.2"
+django-environ = "*"
 django-filter = ">=2.0"
 django-fsm = ">=2.6.0"
 django-graphql-jwt = ">=0.1.9,<0.1.13"
@@ -47,6 +49,7 @@ graphene-django = ">=2.2"
 Markdown = ">=2.4"
 maxminddb = "*"
 "maxminddb-geolite2" = "*"
+python-dotenv = "*"
 phonenumberslite = ">=8.9.1"
 prices = ">=1.0.0"
 "psycopg2-binary" = ">=2.7"
