--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,3 +1,4 @@
+argon2-cffi==18.3.0
 amqp==2.3.2
 aniso8601==3.0.2
 asn1crypto==0.24.0
@@ -25,6 +26,7 @@ django-cache-url==3.0.0
 django-celery-results==1.0.1
 django-countries==5.3.2
 django-elasticsearch-dsl==0.5.0
+django-environ
 django-filter==2.0.0
 django-fsm==2.6.0
 django-graphql-jwt==0.1.12
@@ -78,6 +80,7 @@ purl==1.4
 pycparser==2.19
 pyjwt==1.6.4
 pyphen==0.9.5
+python-dotenv
 python-dateutil==2.7.3; python_version >= '2.7'
 python3-openid==3.1.0; python_version >= '3.0'
 pytz==2018.5
