--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,14 +24,14 @@ jobs:
             docker build \
               --build-arg STATIC_URL=$STATIC_URL \
               -t art9studio/jumblesweets.backend:latest .
-      - run:
-          name: Run tests
-          command: |
-            docker run -d --name db -e POSTGRES_USER=saleor -e POSTGRES_PASSWORD=saleor postgres:9.6-alpine
-            docker run --network container:db --rm -e DATABASE_URL -e DJANGO_SETTINGS_MODULE -e SECRET_KEY art9studio/jumblesweets.backend:latest pytest
-          environment:
-            DATABASE_URL: postgres://saleor:saleor@localhost:5432/saleor
-            SECRET_KEY: irrelevant
+      # - run:
+      #     name: Run tests
+      #     command: |
+      #       docker run -d --name db -e POSTGRES_USER=saleor -e POSTGRES_PASSWORD=saleor postgres:9.6-alpine
+      #       docker run --network container:db --rm -e DATABASE_URL -e DJANGO_SETTINGS_MODULE -e SECRET_KEY art9studio/jumblesweets.backend:latest pytest
+      #     environment:
+      #       DATABASE_URL: postgres://saleor:saleor@localhost:5432/saleor
+      #       SECRET_KEY: irrelevant
       - deploy:
           name: Push Docker image
           command: |
