--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,23 +40,23 @@ jobs:
             docker push art9studio/jumblesweets.backend:$CIRCLE_SHA1
             docker push art9studio/jumblesweets.backend:latest
 
-      - run:
-          name: Deploy saleor-demo
-          command: |
-            if [ -n "$CIRCLE_TAG" ]; then
-              apk add --upgrade --no-cache curl libcurl
-              sh ./scripts/push_static.sh
-              curl -u $DEMO_DEPLOY_KEY: \
-                -d build_parameters[CIRCLE_JOB]=deploy \
-                https://circleci.com/api/v1.1/project/github/mirumee/saleor-demo/tree/master
-            fi
+      # - run:
+      #     name: Deploy saleor-demo
+      #     command: |
+      #       if [ -n "$CIRCLE_TAG" ]; then
+      #         apk add --upgrade --no-cache curl libcurl
+      #         sh ./scripts/push_static.sh
+      #         curl -u $DEMO_DEPLOY_KEY: \
+      #           -d build_parameters[CIRCLE_JOB]=deploy \
+      #           https://circleci.com/api/v1.1/project/github/mirumee/saleor-demo/tree/master
+      #       fi
 
-      - run:
-          name: Deploy saleor master
-          command: |
-            apk add --upgrade --no-cache zip py-pip
-            pip install awscli
-            sh ./scripts/deploy_master.sh > /dev/null 2>&1
+      # - run:
+      #     name: Deploy saleor master
+      #     command: |
+      #       apk add --upgrade --no-cache zip py-pip
+      #       pip install awscli
+      #       sh ./scripts/deploy_master.sh > /dev/null 2>&1
 
 
 workflows:
