--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,6 @@ jobs:
             fi
             sed -i.bak "s#'dev'#'$SALEOR_VERSION'#" saleor/__init__.py
 
-
       - run:
           name: Build application Docker image
           command: |
@@ -51,19 +50,30 @@ jobs:
       #           https://circleci.com/api/v1.1/project/github/mirumee/saleor-demo/tree/master
       #       fi
 
+
       # - run:
       #     name: Deploy saleor master
       #     command: |
       #       apk add --upgrade --no-cache zip py-pip
       #       pip install awscli
       #       sh ./scripts/deploy_master.sh > /dev/null 2>&1
-
+  deploy:
+    machine:
+      enabled: true
+    steps:
+      - run:
+          name: Deploy Over SSH
+          command: |
+            ssh $SSH_USER@$SSH_HOST "docker-compose pull web && docker-compose up -d"
 
 workflows:
   version: 2
   build-deploy:
     jobs:
         - build:
+        - deploy:
+            requires:
+              - build
             filters:
               branches:
                 only: deploy
