--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
       - run:
           name: Deploy Over SSH
           command: |
-            ssh $SSH_USER@$SSH_HOST "docker-compose pull web && docker-compose up -d"
+            ssh $SSH_USER@$SSH_HOST "cd /home/JumbleSweets && docker-compose pull web && docker-compose up -d"
 
 workflows:
   version: 2
